ui/apps/io.ox/files/style.less
/* ... */
.width-less-than-480 {
    #window-content-top {
        #inline-actions-ms {
            margin: 0 30px 0 30px;
            .summary {
                font-size: 12pt;
            }
        }
    }

    .files-wrapper  {
        .files-container {
            &.view-icon {
                margin-right: 0;
            }
        }
        .files-scrollable-pane {
            //reduce padding, margin, right (27px)
            padding: 0;
            .inline-actions {
                margin: 12px 0 12px 12px;
                a {
                    margin-bottom: 10px;
                }
            }
            .inline-actions-right {
                right: 13px;
                top: 5px;
            }
        }

        .files-container {

            &.view-list {
                .file-cell {
                    &.selected {
                        background-color: #ddd;
                        .image-effect();
                    }
                    &:hover {
                        background-color: #F6F6F6;
                        .image-effect();
                    }
                    &.selected:hover {
                        background-color: #ccc;
                        .image-effect();
                    }
                    &.selected span {
                        color: #000;
                    }
                    span.not-selectable {
                        display: inline;
                    }
                    .modified {
                        width: 100px;
                    }
                }
            }
            &.view-icon {
                .file-cell {
                    width: 27%;
                    height: 150px;
                    margin: 10px;
                    .preview img {
                        max-width: 100%;
                        max-height: 100%;
                    }
                    &:hover {
                        border: 0;
                        .preview-border {
                            border: 0;
                        }
                    }
                    &.selected {
                        .image-effect();
                    }
                }
            }
            &.view-tile {
                margin: 0;
                .file-cell {
                    width: 50%;
                    margin: 0;
                    &:hover {
                        border: inherit;
                    }
                    &.selected {
                        border: 0;
                        .image-effect();
                    }
                }
            }
        }
    }
    body > .io-ox-dialog-wrapper .io-ox-dialog-popup {
        top: 40px;
        margin-top: 0;
        width: auto;
        overflow-y: auto;
        bottom: 40px;
        height: 100%;
        max-height: 100%;
        .modal-body {
            max-height: auto;
            .row textarea.col-lg-12 { max-height: 100px; }
            .fileupload .uneditable-input { width: 130px; }
        }
        .modal-footer {
            bottom: 0;
            position: fixed;
            left: 0;
            right: 0;
            padding: 0;

            .row {
                [class*="col-"] {
                    margin-left: 0;
                    float: left;
                }
                .btn {
                    border: 0;
                    border-radius: 0;
                    margin: 0;
                    height: 40px;
                    width: 100%;
                    padding: 0;
                    line-height: 40px;
                }
                .col-md-3 {
                    width: 50%;
                }
            }
        }
    }
}

@media all and (max-width: 768px), all and (max-device-width: 768px)  {
    .width-less-than-768;
}

@media all and (max-width: 480px), all and (max-device-width: 480px) {
    .width-less-than-480;
}

.guidance {
    .files-sizes{
        .breadcrumb{
            margin: 0;
            padding: 0;
            background-color: transparent;
            display: inline;
        }
    }
}

 .io-ox-files-main .io-ox-dialog-popup .modal-body { overflow-x: hidden; }

