Fixed drive inline links on mobile

--- a/ui/apps/io.ox/files/style.less
+++ b/ui/apps/io.ox/files/style.less
@@ -666,6 +666,9 @@ ul.breadcrumb li.prefix {
             }
         }
     }
+    .inline-action-wrapper&.navbar {
+    	min-height: 0px;
+     }
 
     .files-wrapper  {
         .files-container {
@@ -681,10 +684,6 @@ ul.breadcrumb li.prefix {
                 a {
                     margin-bottom: 10px;
                 }
-            }
-            .inline-actions-right {
-                right: 13px;
-                top: 5px;
             }
         }
 
